--- a/client/Makefile
+++ b/client/Makefile
@@ -1,7 +1,10 @@
 OBJS = $(patsubst ./%.cc,.objs/%.o, $(shell find . -type f -name '*.cc'))
 warnings = -Wall -Wextra -Wshadow -Wno-unused-parameter -Wno-unused-variable \
-		   -Wduplicated-cond -Wdouble-promotion -Wnull-dereference
-flags = -g -std=c++0x -fno-rtti
+		   -Wduplicated-cond -Wdouble-promotion -Wnull-dereference -Wformat=2 \
+		   -Wdisabled-optimization -ftabstop=2 -Wsuggest-override -Wconversion \
+		   -Wsign-conversion -Wlogical-op
+		   # -Wpadded
+flags = -ggdb3 -Og -std=c++0x -fno-rtti
 libraries = -lSDL2 -lGLEW -lGL
 CXX = g++
 CXXFLAGS = $(warnings) $(flags)
