Makefile: rm Wshadow

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,4 +1,4 @@
-warnings = -Wall -Wextra -Wshadow -Wno-unused-parameter -Wno-unused-variable \
+warnings = -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable \
 		   -Wduplicated-cond -Wdouble-promotion -Wnull-dereference -Wformat=2 \
 		   -Wdisabled-optimization -ftabstop=2 -Wsuggest-override -Wlogical-op
 flags = -ggdb3 -Og -std=c++0x -fno-rtti
