Move abstract code to engine/

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,17 +1,19 @@
 warnings = -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable \
 		   -Wduplicated-cond -Wdouble-promotion -Wnull-dereference -Wformat=2 \
-		   -Wdisabled-optimization -ftabstop=2 -Wsuggest-override -Wlogical-op
+		   -Wdisabled-optimization -Wsuggest-override -Wlogical-op
 flags = -ggdb3 -Og -std=c++0x -fno-rtti
 libraries = -lSDL2 -lGLEW -lGL
 CXX = g++
 BIN = qeike
 
-OBJS = $(patsubst ./%.cc,.objs/%.o, $(shell find . -type f -name '*.cc'))
+OBJS = $(patsubst ../%.cc,.objs/%.o, $(shell find .. -type f -name '*.cc'))
 DEPS = $(OBJS:.o=.d)
 CXXFLAGS = $(warnings) $(flags)
 LDFLAGS = $(libraries)
 
 $(shell mkdir -p .objs >/dev/null)
+$(shell mkdir -p .objs/engine >/dev/null)
+$(shell mkdir -p .objs/client >/dev/null)
 
 all: $(BIN)
 	./$(BIN)
@@ -20,7 +22,11 @@ $(BIN): $(OBJS)
 	@echo "Linking to $@"
 	@$(CXX) -o $@ $^ $(LDFLAGS)
 
-.objs/%.o: %.cc
+.objs/client/%.o: %.cc
+	@echo "Compiling $<"
+	@$(CXX) -MMD -MP -c -o $@ $< $(CXXFLAGS)
+
+.objs/engine/%.o: ../engine/%.cc
 	@echo "Compiling $<"
 	@$(CXX) -MMD -MP -c -o $@ $< $(CXXFLAGS)
 
